fixed z-index and popup modal for event and eventAudience

--- a/src/assets/layout/_menu.scss
+++ b/src/assets/layout/_menu.scss
@@ -2,7 +2,7 @@
     position: fixed;
     width: 20rem;
     height: calc(100vh - 8rem);
-    z-index: 997;
+    z-index: 1;
     overflow-y: auto;
     user-select: none;
     top: 6rem;
