--- a/src/assets/layout/_topbar.scss
+++ b/src/assets/layout/_topbar.scss
@@ -1,7 +1,7 @@
 .layout-topbar {
     position: fixed;
     height: 4rem;
-    z-index: 996;
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
